# COMP4610-COMP8610-HW5

./: CMakeLists.txt  README.md  task1.cpp  task2_1.cpp  task2_2.cpp  task3.cpp  task4.cpp  task5_1.cpp  task5_2.cpp
include/: box.h  cloth.h  collider.h  mass.h  rasterizer.h  rope.h  spring.h  transforms.h
src/: cloth.cpp  rasterizer.cpp  rope.cpp  transforms.cpp
